--- a/word-order-randomizer.html
+++ b/word-order-randomizer.html
@@ -22,7 +22,16 @@
             </h6>
             <h6>
                 Then, press shuffle and they will appear in a completely random order. 
-            </h>
+            </h6>
+            <h6>
+                Now, try to remember the meaning of the words without peecking.
+            </h6>
+            <h6>
+                When you hover over a word, it'll show the meaning you have assigned to it!
+            </h6>
+            <h7>
+                Go forth in your language leaning journey! Rememeber that practice makes perfect, scpecially in things like these.
+            </h7>
         </header>
         <hr>
         <content>
@@ -36,7 +45,17 @@
         </button>
         <div class="output"></div>
         </content>
-        
+        <hr>
+        <foot>
+            <h6>
+                By Darina Kabidenova with support of biSLad
+            </h6>
+            <h6>
+                Contact information:
+                · email: bislad.empire@gmail.com
+                · instagram: @bislad777 @darina_kbdnva
+            </h6>
+        </foot>
         <script src="script/word-order-randomizer.js"></script>
     </body>
 </html>
