--- a/word-order-randomizer.html
+++ b/word-order-randomizer.html
@@ -30,7 +30,7 @@
                 When you hover over a word, it'll show the meaning you have assigned to it!
             </h6>
             <h6>
-                Go forth in your language leaning journey! Rememeber that practice makes perfect, scpecially in things like these.
+                Go forth in your language leaning journey! Rememeber that practice makes perfect, specially in things like these.
             </h6>
         </header>
         <hr>
