--- a/word-order-randomizer.html
+++ b/word-order-randomizer.html
@@ -53,7 +53,7 @@
             <h6>
                 Contact information:
                 · email: bislad.empire@gmail.com
-                · instagram: @bislad777 @darina_kbdnva
+                · instagram: @bislad.empire @darina_kbdnva
             </h6>
         </foot>
         <script src="script/word-order-randomizer.js"></script>
